--- a/projects/mona-ui/src/lib/dropdowns/combo-box/components/combo-box/combo-box.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/combo-box/components/combo-box/combo-box.component.html
@@ -16,7 +16,7 @@
 
 <ng-template #popupTemplate>
     <div class="mona-dropdown-popup-list-wrapper">
-        <mona-list [height]="200"
+        <mona-list [maxHeight]="200"
                    (itemSelect)="onItemSelect($event)"
                    [monaListSelectable]="selectableOptions"
                    (selectedKeysChange)="onSelectedKeysChange($event)">
