--- a/projects/mona-ui/src/lib/list-box/components/list-box/list-box.component.html
+++ b/projects/mona-ui/src/lib/list-box/components/list-box/list-box.component.html
@@ -6,7 +6,7 @@
 >
     <div class="mona-list-box-view">
         <mona-list-view [items]="listBoxItems()" [monaListViewSelectable]="{enabled: true, mode: 'single'}"
-                        [navigable]="{enabled: true, mode: 'select'}"
+                        [monaListViewNavigable]="{enabled: true, mode: 'select'}"
                         [selectedKeys]="selectedItems" (selectedKeysChange)="onSelectedItemChange($event)">
             <ng-template monaListViewItemTemplate let-item let-index="index">
                 <div class="mona-list-box-item" [attr.data-item]="textField?item[textField]:item" *ngIf="!itemTemplate">
