No data template directive

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -601,6 +601,9 @@
                                             <span style="color: var(--mona-primary-light);">{{listViewDataItems.length}}</span> items | <span style="color: #FF3055;">{{listViewSelectedKeys.size}}</span> selected
                                         </div>
                                     </ng-template>
+<!--                                    <ng-template monaListViewNoDataTemplate>-->
+<!--                                        <div style="color: #fafd0f;">No items...</div>-->
+<!--                                    </ng-template>-->
                                 </mona-list-view>
 
                             </div>
