Refactor list box component

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -562,7 +562,7 @@
                                                [toolbar]="{position:'right'}"
                                                [connectedList]="listBox2">
                                     <ng-template monaListBoxItemTemplate let-item>
-                                        <div style="color: #00a86b; padding: 4px 8px;">{{item.text}}</div>
+                                        <div style="color: #00a86b;">{{item.text}}</div>
                                     </ng-template>
                                 </mona-list-box>
                                 <mona-list-box [items]="listBox2Items" textField="text" [toolbar]="false" #listBox2></mona-list-box>
