List box no data template directive

--- a/projects/mona-ui/src/lib/list-box/components/list-box/list-box.component.html
+++ b/projects/mona-ui/src/lib/list-box/components/list-box/list-box.component.html
@@ -16,6 +16,11 @@
                                   [ngTemplateOutletContext]="{$implicit:dataItem}"></ng-container>
                 </ng-template>
             }
+            @if (noDataTemplate) {
+                <ng-template monaListViewNoDataTemplate>
+                    <ng-container [ngTemplateOutlet]="noDataTemplate"></ng-container>
+                </ng-template>
+            }
         </mona-list-view>
     </div>
     @if (toolbarOptions != null) {
