--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -35,6 +35,8 @@
 <!--                                </mona-contextmenu>-->
 <!--                            </ng-template>-->
             </mona-tree-view>
+
+            <mona-tree></mona-tree>
         </mona-splitter-pane>
         <mona-splitter-pane>
             <mona-tab-strip [keepTabContent]="true" [closable]="false" (tabClose)="onTabStripTabClose($event)">
