--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
     <mona-splitter orientation="horizontal">
         <mona-splitter-pane [size]="300" [collapsible]="true">
-            <mona-tree-view [data]="treeData" textField="text" childrenField="items" keyField="id"
+            <mona-tree-view *ngIf="true" [data]="treeData" textField="text" childrenField="items" keyField="id"
                             [monaTreeViewCheckable]="{enabled: true, checkChildren: true, checkParents: true, mode: 'multiple'}"
                             [checkedKeys]="treeCheckedKeys"
                             (checkedKeysChange)="onTreeCheckedKeysChange($event)"
@@ -18,8 +18,6 @@
                             (nodeDrag)="onTreeNodeDrag($event)"
                             (nodeDrop)="onTreeNodeDrop($event)"
                             (nodeDragEnd)="onTreeNodeDragEnd($event)"
-                            (nodeClick)="onTreeNodeClick($event)"
-                            (nodeDoubleClick)="onTreeNodeDoubleClick($event)"
                             monaTreeViewDisable [disabledKeys]="treeDisabledKeys"
             >
                 <!--            monaTreeViewDisable [disabledKeys]="treeDisabledKeys"-->
@@ -36,7 +34,7 @@
 <!--                            </ng-template>-->
             </mona-tree-view>
 
-            <mona-tree></mona-tree>
+            <mona-tree (nodeClick)="onTreeNodeClick($event)"></mona-tree>
         </mona-splitter-pane>
         <mona-splitter-pane>
             <mona-tab-strip [keepTabContent]="true" [closable]="false" (tabClose)="onTabStripTabClose($event)">
