--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -150,7 +150,6 @@ input, textarea, button {
 
 div.mona-list {
     @include font-medium;
-    //border: 1px solid var(--mona-border-color);
     & ul {
         @include scrollbars-thin;
         & li {
@@ -200,44 +199,35 @@ mona-filter-input.mona-list-filter-input {
     }
 }
 
-//ul.mona-list {
-//    & li {
-//        color: var(--mona-text);
-//
-//        &:hover {
-//            background-color: var(--mona-background-hover);
-//        }
-//        &:active:not(.mona-selected) {
-//            background-color: var(--mona-background-active);
-//        }
-//
-//        &.mona-selected {
-//            background-color: var(--mona-primary);
-//            color: var(--mona-text-inverted);
-//        }
-//
-//        // TODO: Update this to a better visual style
-//        &.mona-highlighted {
-//            //border: 1px solid darkgray;
-//            box-shadow: 0 0 0 1px var(--mona-focus-border-color) inset;
-//        }
-//
-//        &.mona-disabled {
-//            @include disabled;
-//        }
-//    }
-//    @include scrollbars-thin;
-//}
-
-//li.mona-list-group-header {
-//    background-color: var(--mona-background-dark);
-//    border-top: 1px solid var(--mona-border-color);
-//    border-bottom: 0.5px solid var(--mona-border-color);
-//}
-
 .mona-list-popup-content {
     padding: 0 !important;
     border-top: none !important;
+}
+
+div.mona-tree {
+    @include font-medium;
+}
+
+div.mona-tree-node {
+    padding: 4px 8px;
+    &:hover {
+        box-shadow: inset 0 0 0 1px var(--mona-border-color-dark);
+        background-color: var(--mona-background-hover-darker);
+    }
+    &:active {
+        background-color: var(--mona-background-active-darker);
+        box-shadow: inset 0 0 0 1px var(--mona-border-color-dark);
+    }
+    &.mona-selected {
+        background-color: var(--mona-primary);
+        color: var(--mona-text-inverted);
+        box-shadow: inset 0 0 0 1px var(--mona-selected-border-color);
+    }
+}
+
+span.mona-tree-node-text {
+    color: var(--mona-text);
+
 }
 
 /** Buttons */
