--- a/projects/mona-ui/src/lib/common/tree/components/tree-node/tree-node.component.html
+++ b/projects/mona-ui/src/lib/common/tree/components/tree-node/tree-node.component.html
@@ -1,4 +1,6 @@
 <div class="mona-tree-node"
-     [class.mona-selected]="selected()" (click)="onNodeClick($event)">
+     [class.mona-selected]="selected()"
+     [class.mona-highlighted]="navigated()"
+     (click)="onNodeClick($event)">
     <span class="mona-tree-node-text">{{nodeText()}}</span>
 </div>
