--- a/projects/mona-ui/src/lib/common/tree/components/tree/tree.component.html
+++ b/projects/mona-ui/src/lib/common/tree/components/tree/tree.component.html
@@ -1,3 +1,3 @@
-<div class="mona-tree" >
+<div class="mona-tree" [tabindex]="1">
     <mona-sub-tree [nodes]="treeService.nodeSet()" [parent]="null" [depth]="0"></mona-sub-tree>
 </div>
