--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -223,6 +223,9 @@ div.mona-tree-node {
         color: var(--mona-text-inverted);
         box-shadow: inset 0 0 0 1px var(--mona-selected-border-color);
     }
+    &.mona-highlighted {
+        box-shadow: inset 0 0 0 1px var(--mona-focus-border-color);
+    }
 }
 
 span.mona-tree-node-text {
