Node check event

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -46,6 +46,7 @@
                             [selectedKeys]="treeSelectedKeys"
                             (selectedKeysChange)="onTreeSelectedKeysChange($event)"
                             (nodeSelect)="onTreeNodeSelect($event)"
+                            (nodeCheck)="onTreeNodeCheck($event)"
                             (nodeClick)="onTreeNodeClick($event)"></mona-tree>
                 </mona-splitter-pane>
             </mona-splitter>
