--- a/projects/mona-ui/src/lib/common/tree/components/sub-tree/sub-tree.component.html
+++ b/projects/mona-ui/src/lib/common/tree/components/sub-tree/sub-tree.component.html
@@ -17,7 +17,8 @@
                            id="mona-tree-node-checkbox-{{node.uid}}"
                            [indeterminate]="nodeComponent.indeterminate()"
                            [ngModel]="nodeComponent.checked()"
-                           (ngModelChange)="onCheckStateChange(node, !nodeComponent.checked())" monaCheckBox />
+                           (click)="nodeComponent.checkboxClick$.next($event)"
+                           (ngModelChange)="nodeComponent.checkboxCheck$.next($event)" monaCheckBox />
                     <label for="mona-tree-node-checkbox-{{node.uid}}"></label>
                 }
                 <mona-tree-node [node]="node" #nodeComponent></mona-tree-node>
